Added GetRecordConversionQuery
