# backend/Api/OpenApi/siradig-calc.spec.json
@@ -3896,6 +3896,171 @@
       "UnresolvedReference": false,
       "Reference": null
     },
+    "/api/records/receipts/convert/{sourceId}/to/{targetId}": {
+      "Summary": null,
+      "Description": null,
+      "Operations": {
+        "Get": {
+          "Tags": [
+            {
+              "Name": "RecordsQuery",
+              "Description": null,
+              "ExternalDocs": null,
+              "Extensions": {},
+              "UnresolvedReference": false,
+              "Reference": null
+            }
+          ],
+          "Summary": null,
+          "Description": null,
+          "ExternalDocs": null,
+          "OperationId": null,
+          "Parameters": [
+            {
+              "UnresolvedReference": false,
+              "Reference": null,
+              "Name": "sourceId",
+              "In": 2,
+              "Description": null,
+              "Required": true,
+              "Deprecated": false,
+              "AllowEmptyValue": false,
+              "Style": 3,
+              "Explode": false,
+              "AllowReserved": false,
+              "Schema": {
+                "Title": null,
+                "Type": "string",
+                "Format": "uuid",
+                "Description": null,
+                "Maximum": null,
+                "ExclusiveMaximum": null,
+                "Minimum": null,
+                "ExclusiveMinimum": null,
+                "MaxLength": null,
+                "MinLength": null,
+                "Pattern": null,
+                "MultipleOf": null,
+                "Default": null,
+                "ReadOnly": false,
+                "WriteOnly": false,
+                "AllOf": [],
+                "OneOf": [],
+                "AnyOf": [],
+                "Not": null,
+                "Required": [],
+                "Items": null,
+                "MaxItems": null,
+                "MinItems": null,
+                "UniqueItems": null,
+                "Properties": {},
+                "MaxProperties": null,
+                "MinProperties": null,
+                "AdditionalPropertiesAllowed": true,
+                "AdditionalProperties": null,
+                "Discriminator": null,
+                "Example": null,
+                "Enum": [],
+                "Nullable": false,
+                "ExternalDocs": null,
+                "Deprecated": false,
+                "Xml": null,
+                "Extensions": {},
+                "UnresolvedReference": false,
+                "Reference": null,
+                "Annotations": null
+              },
+              "Examples": {},
+              "Example": null,
+              "Content": {},
+              "Extensions": {}
+            },
+            {
+              "UnresolvedReference": false,
+              "Reference": null,
+              "Name": "targetId",
+              "In": 2,
+              "Description": null,
+              "Required": true,
+              "Deprecated": false,
+              "AllowEmptyValue": false,
+              "Style": 3,
+              "Explode": false,
+              "AllowReserved": false,
+              "Schema": {
+                "Title": null,
+                "Type": "string",
+                "Format": "uuid",
+                "Description": null,
+                "Maximum": null,
+                "ExclusiveMaximum": null,
+                "Minimum": null,
+                "ExclusiveMinimum": null,
+                "MaxLength": null,
+                "MinLength": null,
+                "Pattern": null,
+                "MultipleOf": null,
+                "Default": null,
+                "ReadOnly": false,
+                "WriteOnly": false,
+                "AllOf": [],
+                "OneOf": [],
+                "AnyOf": [],
+                "Not": null,
+                "Required": [],
+                "Items": null,
+                "MaxItems": null,
+                "MinItems": null,
+                "UniqueItems": null,
+                "Properties": {},
+                "MaxProperties": null,
+                "MinProperties": null,
+                "AdditionalPropertiesAllowed": true,
+                "AdditionalProperties": null,
+                "Discriminator": null,
+                "Example": null,
+                "Enum": [],
+                "Nullable": false,
+                "ExternalDocs": null,
+                "Deprecated": false,
+                "Xml": null,
+                "Extensions": {},
+                "UnresolvedReference": false,
+                "Reference": null,
+                "Annotations": null
+              },
+              "Examples": {},
+              "Example": null,
+              "Content": {},
+              "Extensions": {}
+            }
+          ],
+          "RequestBody": null,
+          "Responses": {
+            "200": {
+              "Description": "OK",
+              "Headers": {},
+              "Content": {},
+              "Links": {},
+              "Extensions": {},
+              "UnresolvedReference": false,
+              "Reference": null
+            }
+          },
+          "Callbacks": {},
+          "Deprecated": false,
+          "Security": [],
+          "Servers": [],
+          "Extensions": {},
+          "Annotations": null
+        }
+      },
+      "Servers": [],
+      "Parameters": [],
+      "Extensions": {},
+      "UnresolvedReference": false,
+      "Reference": null
+    },
     "/api/records/templates/forms/{id}": {
       "Summary": null,
       "Description": null,
@@ -6969,6 +7134,6 @@
   "Tags": [],
   "ExternalDocs": null,
   "Extensions": {},
-  "HashCode": "D849C84F375F30CFE340FA411E4B70CA936F2CE5E8DA5B545B62A4156D5E8F12C9A0AC3530CCD7488B822E7FF76B3045248D5F0EB39E6A39BC69745ACDE80E6B",
+  "HashCode": "8BD9848E7AC01FB93461DBD75D465F0D80D2D757F06EBB4C108D53233A2F206257984CF7077D58374C80B2C2253D6C5DBCC0D8EEE02E87C9DC5D7685D0F3ADB4",
   "Annotations": null
 }
